<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp">

    <TextView
            android:id="@+id/detail_tvHi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi"
            android:layout_alignParentLeft="true" android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true" android:layout_marginTop="0dp"/>
    <TextView
            android:id="@+id/detail_tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" android:layout_marginLeft="30dp"
            android:layout_alignTop="@id/detail_tvHi"/>
    <TextView
            android:id="@+id/detail_tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Red"
            android:textStyle="italic"
            android:text="@string/logout"
            android:layout_alignParentRight="true" android:layout_marginRight="10dp"
            android:layout_alignTop="@id/detail_tvHi"/>

    <ImageView
            android:id="@+id/detail_ivAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/avatar"
            android:layout_alignLeft="@+id/detail_tvHi"
            android:layout_below="@id/detail_tvHi"/>
    <TextView
            android:id="@+id/detail_tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_alignParentLeft="true" android:layout_marginLeft="120dp"
            android:layout_below="@+id/detail_tvHi"/>
    <TextView
            android:id="@+id/detail_tvAddressContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_content"
            android:layout_alignParentRight="true" android:layout_marginRight="0dp"
            android:layout_below="@+id/detail_tvHi"/>
    <Spinner
            android:id="@+id/detail_spAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/address"
            android:prompt="@string/address"
            android:visibility="invisible"/>

    <TextView
            android:id="@+id/detail_tvBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:layout_alignLeft="@id/detail_tvAddress"
            android:layout_below="@id/detail_tvAddress"/>
    <TextView
            android:id="@+id/detail_tvBirthdayContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday_content"
            android:layout_alignParentRight="true" android:layout_marginRight="0dp"
            android:layout_below="@id/detail_tvAddressContent"/>
    <TextView
            android:id="@+id/detail_tvOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online"
            android:layout_alignLeft="@id/detail_tvBirthday"
            android:layout_below="@id/detail_tvBirthday"/>
    <TextView
            android:id="@+id/detail_tvOnlineContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_content"
            android:layout_alignParentRight="true" android:layout_marginRight="0dp"
            android:layout_below="@id/detail_tvBirthdayContent"/>


    <TextView
            android:id="@+id/detail_tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_alignLeft="@id/detail_tvOnline"
            android:layout_below="@id/detail_tvOnline"/>
    <TextView
            android:id="@+id/detail_tvGenderContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_content"
            android:layout_alignParentRight="true" android:layout_marginRight="0dp"
            android:layout_below="@id/detail_tvOnlineContent"/>

    <RadioGroup
            android:id="@+id/detail_rbGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/detail_tvAddress"
            android:layout_below="@+id/detail_tvGender" android:visibility="gone">
        <RadioButton
                android:id="@+id/detail_rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male"
                android:layout_gravity="left|center_vertical"/>
        <RadioButton
                android:id="@+id/detail_rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_gravity="left|center_vertical"/>
    </RadioGroup>

    <CheckBox
            android:id="@+id/detail_cbShowFriendList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_friend_list"
            android:checked="true"
            android:layout_alignLeft="@+id/detail_tvHi"
            android:layout_below="@id/detail_rbGroup" android:layout_marginTop="30dp"/>
    <ListView
            android:id="@+id/detail_lvFriendList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/detail_tvHi"
            android:layout_below="@+id/detail_cbShowFriendList"/>

</RelativeLayout>